<resources>
    <string name="app_name">Hackathon</string>
    <string name="title_activity_maps">Map</string>

    <!-- Setting Titles -->
    <string name="filter_header">Filters</string>
    <string name="perm_header">Permissions</string>

    <!-- Filter Preferences -->
    <string name="bench">Bench</string>
    <string name="bike">Bike Parking</string>
    <string name="washroom">Public Washroom</string>
    <string name="notice">Notice Board</string>
    <string name="info">Information Board</string>
    <string name="poster">Poster Board</string>
    <string name="newspaper">Newspaper Board</string>
    <string name="garbage">Garbage Bin</string>
    <string name="transit">Transit Shelter</string>

    <!-- Permission Preferences -->
    <string name="location_title">Location</string>
    <string name="storage_title">Storage</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Layout Strings -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Navigation Menu Items-->
    <string name="settings">Settings</string>
    <string name="about">About</string>
</resources>