<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/filter_header">

        <SwitchPreferenceCompat
            app:key="Nearest Bench"
            app:title="@string/bench"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="Nearest Bike Parking"
            app:title="@string/bike"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="Nearest Public Washroom"
            app:title="@string/washroom"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="Nearest Notice Board"
            app:title="@string/notice"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="Nearest Information Board"
            app:title="@string/info"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="Nearest Poster Board"
            app:title="@string/poster"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="Nearest Newsstand"
            app:title="@string/newspaper"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="Nearest Garbage Bin"
            app:title="@string/garbage"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="Nearest Transit Shelter"
            app:title="@string/transit"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="false"/>

    </PreferenceCategory>

    <!--<PreferenceCategory app:title="@string/perm_header">

        <ListPreference
            app:defaultValue="Deny"
            app:entries="@array/location_entries"
            app:entryValues="@array/location_values"
            app:key="location"
            app:title="@string/location_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:id="storage"
            app:defaultValue="Deny"
            app:entries="@array/storage_entries"
            app:entryValues="@array/storage_values"
            app:key="storage"
            app:title="@string/storage_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>-->

</PreferenceScreen>